tests/paczka1/fuzzy1/73873558.err
Error in line 2: ZfjaN S809 32,1
Error in line 20: 9pVrfQf8 S98 42,5
Error in line 25: 9pVrfQf8 S809 16,9
Error in line 26: S98 S900 8,5
Error in line 23: 5IumwY S98 105,0
Error in line 33: 5IumwY S809 67,7
Error in line 34: 5IumwY S900 88,3
